apps/skein_compiler/test/skein/conformance/negative/interpolation_uncoercible.skein
-- expect: E0020
-- #310: interpolation renders scalar values only (String, Int, Float, Bool,
-- Uuid, Instant). A record or fn-reference segment previously compiled,
-- loaded, and crashed at runtime with {:unsupported_interpolation, value}.
module InterpolationUncoercible {
  type User { name: String }

  fn g() -> Int { 1 }

  fn f() -> String {
    let u = User { name: "a" }
    let h = &g
    "${u} ${h}"
  }
}
